Added JSON-LD tags and content
Added (optional) basic JSON-LD tags, primarily for updating Google
Knowledge Graph and based on Schema.org
https://developers.google.com/structured-data/customize/overview

--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -2,10 +2,10 @@
 <!--[if IE 8]> <html class="no-js ie ie8 lt-ie8" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if IE 9]> <html class="no-js ie ie9" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
-<head>
+<head itemscope itemtype="http://schema.org/WebSite">
     <meta charset="UTF-8">
 
-    <title>{{ page.title }} - {{ app.title }}</title>
+    <title itemprop='name'>{{ page.title }} - {{ app.title }}</title>
 
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.title }}, {{ page.keywords }}, {{ app.keywords }} " />
