--- a/content/_layouts/alloy.hbs
+++ b/content/_layouts/alloy.hbs
@@ -2,40 +2,22 @@
 <!--[if IE 8]> <html class="no-js ie ie8 lt-ie8" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if IE 9]> <html class="no-js ie ie9" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
-<head>
+<head itemscope itemtype="http://schema.org/WebSite">
     <meta charset="UTF-8">
 
-    <title>{{ page.title }} - ALLOY</title>
+    <title itemprop='name'>{{ page.title }} - ALLOY</title>
 
-    <meta name="description" content="{{ page.description }}" />
-    <meta name="keywords" content="{{ page.title }}, {{ page.keywords }}, {{ app.keywords }} " />
-    <meta name="author" content="The Alloy Team" />
+    {{> metatags }}
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{{ assets }}/css/fontloader.css" />
     <link rel="stylesheet" href="{{ assets }}/css/main.css" />
 
-    <!-- For retina-display iPads -->
-    <!-- <link href="{{ assets }}/img/icons/retina_ipad_home.png" rel="apple-touch-icon-precomposed" sizes="144x144" type="image/png"/> -->
-    <!-- For retina-display iPhones -->
-    <!-- <link href="{{ assets }}/img/icons/iphone_home.png" rel="apple-touch-icon-precomposed" sizes="114x114" type="image/png"/> -->
-    <!-- For iPad 1 -->
-    <!-- <link href="{{ assets }}/img/icons/ipad_home.png" rel="apple-touch-icon-precomposed" sizes="72x72" type="image/png"/> -->
-    <!-- For iPhone 3G, iPod Touch and Android -->
-    <!-- <link href="{{ assets }}/img/icons/iphone_home.png" rel="apple-touch-icon-precomposed" type="image/png"/> -->
-    <!-- For Nokia -->
-    <!-- <link href="{{ assets }}/img/icons/iphone_home.png" rel="shortcut icon"/> -->
-    <!-- For everything else -->
-    <!-- <link href="{{ assets }}/img/icons/favicon.png" rel="shortcut icon" type="image/png"/> -->
-    <!-- <link href="{{ assets }}/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon"/> -->
+    {{> metaicons }}
 
-    <script src="{{ assets }}/js/alloy.initial.js"></script>
-    <script src="{{ assets }}/js/app/conf.js"></script>
+    {{> metacard }}
 
-    <!-- IE8 and below fallbacks -->
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <script type="text/javascript" src="{{ assets }}/js/libs/respond/respond.min.js"></script>
-    <![endif]-->
+    {{> ALLOY_headscripts }}
 
 </head>
 
@@ -51,6 +33,7 @@
     {{> ALLOY_footer }}
     {{> ALLOY_copyright }}
     {{> ALLOY_scripts }}
+    {{> ALLOY_jsonld }}
     {{> ALLOY_debug }}
 
     <!-- <div class="modal__mask modal__mask--visible"></div> -->
