Moved Webpage schema to metatag
Moved Webpage schema to metatag, app.json updated accordingly.

--- a/content/_layouts/alloy.hbs
+++ b/content/_layouts/alloy.hbs
@@ -5,7 +5,7 @@
 <head itemscope itemtype="http://schema.org/WebSite">
     <meta charset="UTF-8">
 
-    <title itemprop='name'>{{ page.title }} - ALLOY</title>
+    <title>{{ page.title }} - ALLOY</title>
 
     {{> metatags }}
 
