--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -5,7 +5,7 @@
 <head itemscope itemtype="http://schema.org/WebSite">
     <meta charset="UTF-8">
 
-    <title itemprop='name'>{{ page.title }} - {{ app.title }}</title>
+    <title>{{ page.title }} - {{ app.title }}</title>
 
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.title }}, {{ page.keywords }}, {{ app.keywords }} " />
