--- a/content/_layouts/startup.hbs
+++ b/content/_layouts/startup.hbs
@@ -9,7 +9,7 @@ js-stage: true
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-    <title itemprop='name'>{{ page.title }} - {{ app.title }}</title>
+    <title>{{ page.title }} - {{ app.title }}</title>
 
     {{> metatags }}
 
