--- a/content/_partials/metatags.hbs
+++ b/content/_partials/metatags.hbs
@@ -2,6 +2,7 @@
 <meta name="keywords" content="{{ page.title }}, {{ page.keywords }}, {{ app.keywords }} " />
 <meta name="author" content="{{ app.author }}" />
 <meta itemprop="url" content="{{ app.url }}" />
+<meta itemprop="name" content="{{ app.name }}" />
 {{#if app.addr }}
 <meta name="geography" content="{{ app.address }}" />
 {{/if}}
