--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -239,6 +239,7 @@
 @MODULE-Image:                  true;
 @MODULE-Label:                  true;
 @MODULE-Map:                    true;
+@MODULE-Gridder:				true;
 @MODULE-Gridify:                true;
 @MODULE-Media:                  true;
 @MODULE-Modal:                  true;
