--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -243,6 +243,7 @@
 @MODULE-Gridify:                true;
 @MODULE-Media:                  true;
 @MODULE-Modal:                  true;
+@MODULE-Modeless:               true;
 @MODULE-Navigation:             true;
 @MODULE-Overlay:                true;
 @MODULE-Pagination:             true;
