--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -191,6 +191,15 @@
 </script>
 {{/if}}
 
+{{#if js-modeless}}
+<script>
+	require(["modeless"], function() {
+
+	});
+</script>
+{{/if}}
+
+
 {{#if js-scrollbar}}
 <script>
 	require(["scrollbar"], function() {
