--- a/assets/less/alloy.less
+++ b/assets/less/alloy.less
@@ -49,6 +49,7 @@
 @import "base_modules/panel.less";
 @import "base_modules/popover.less";
 @import "base_modules/stage.less";
+@import "base_modules/scrollspy.less";
 @import "base_modules/section.less";
 @import "base_modules/story.less";
 @import "base_modules/table.less";
