--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -250,6 +250,7 @@
 @MODULE-Panel:					true;
 @MODULE-Popover:				true;
 @MODULE-Print:                  true;
+@MODULE-ScrollSpy:				true;
 @MODULE-Scrollbar:				true;
 @MODULE-Story:             		true;
 @MODULE-RTE:					true;
