--- a/assets/less/startup.less
+++ b/assets/less/startup.less
@@ -47,6 +47,7 @@
 //@import "base_modules/pagination.less";
 //@import "base_modules/panel.less";
 //@import "base_modules/popover.less";
+@import "base_modules/scrollspy.less";
 @import "base_modules/scrollbar.less";
 @import "base_modules/section.less";
 @import "base_modules/stage.less";
