--- a/content/Alloy/Components/scrollspy.hbs
+++ b/content/Alloy/Components/scrollspy.hbs
@@ -1,13 +1,13 @@
 ---
-title: Modeless
+title: ScrollSpy
 layout: alloy.hbs
 
 nav-thumb: "placeholder.jpg"
-nav-title: "Modeless"
-nav-text: "Modeless"
-nav-variant: "modeless"
+nav-title: "ScrollSpy"
+nav-text: "ScrollSpy"
+nav-variant: "scrollspy"
 page-category: "components"
-js-modeless: true
+js-scrollspy: true
 ---
 
 <main class="w w--main">
@@ -23,7 +23,6 @@ js-modeless: true
 <!-- writings -->
 
 		        <div class="page__body rte">
-
 		        </div>
 
 <!-- example -->
@@ -36,25 +35,9 @@ js-modeless: true
 		            <div class="section__body">
 				        <!-- code -->
 
-				        <a href="#" class="button modeless" data-modeless='{"content": "<div class=&#39;modeless-dialog&#39;><div class=&#39;modeless_draggable&#39;></div><div class=&#39;panel full&#39;>This is the content inside of the modeless dialog from the data-modeless attribute of the button!<br/><input type=&#39;text&#39; /><br />The value in the text box won&#39;t stay after you close this window...<a href=&#39;#&#39; class=&#39;button close-modeless-content&#39;>Close</a></div></div>", "draggableClass": "modeless_draggable", "stateful": false }'>This example modeless dialog</a>
-
-				        <a href="#" class="button modeless" data-modeless='{"content": "#modelesscontent", "stateful": true}'>This is a stateful dialog</a>
+				        {{> scrollspy scrollspy}}
 
 				        <!-- end of code -->
-			        </div>
-
-			        <div class="hidden">
-				        <div id="modelesscontent" class="modeless-dialog">
-				        	<div class="modeless_draggable"></div>
-				        	<div class="panel full">
-				        		This is the content inside of the stateful dialog from some hidden content in the page!
-				        		<br />
-				        		<input type="text" />
-				        		<br />
-				        		Whatever you type here should stay after you close the window...
-				        		<a href="#" class="button close-modeless-content">Close</a>
-				        	</div>
-				        </div>
 			        </div>
 
 		        </section>
