--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -99,48 +99,28 @@
 {{#if js-gridder}}
 <script type="text/JavaScript">
 	require(["gridder"], function() {
-		// Set default spacing
-		var startSpacing = 20;
-		var startColumns = 4;
-		if (window.innerWidth <= 1000) {
-			startSpacing = 0;
-			startColumns = 3
-		} else if (window.innerWidth > 1200) {
-			startSpacing = 25;
-			startColumns = 6;
-		}
+
+		var beforeResize = function(gridder) {
+			if (window.innerWidth < 400) {
+				gridder.changeSettings({ verticalSpace: 5, horizontalSpace: 5, columns: 1 });
+			} else if (window.innerWidth < 750) {
+				gridder.changeSettings({ verticalSpace: 0, horizontalSpace: 0, columns: 5 });
+			} else if (window.innerWidth < 1250) {
+				gridder.changeSettings({ verticalSpace: 10, horizontalSpace: 10, columns: 5 });
+			} else {
+				gridder.changeSettings({ verticalSpace: 20, horizontalSpace: 20, columns: 5 });
+			}
+		};
 
 		// Init gridder
 		$(".gridder").gridder({
-			verticalSpace: startSpacing,
-			horizontalSpace: startSpacing,
-			columns: startColumns
+			beforeResize: beforeResize
 		});
 
-		// Get gridder from the elements data attr
-		var gridder = $(".gridder").data("gridder");
-
-		// On resize overwrite the settings for spacing
-		$(window).resize(function() {
-			if (window.innerWidth <= 1000) {
-				gridder.changeSettings({
-					verticalSpace: 0,
-					horizontalSpace: 0,
-					columns: 3
-				});
-			} else if (window.innerWidth > 1200) {
-				gridder.changeSettings({
-					verticalSpace: 25,
-					horizontalSpace: 25,
-					columns: 6
-				})
-			} else {
-				gridder.changeSettings({
-					verticalSpace: 20,
-					horizontalSpace: 20,
-					columns: 4
-				})
-			}
+		// Gridder alt example
+		$(".gridder--alt").gridder({
+			columns: 3,
+			heights: ["normal"]
 		});
 	});
 </script>
