--- a/content/Alloy/Components/gridder.hbs
+++ b/content/Alloy/Components/gridder.hbs
@@ -42,7 +42,22 @@ js-gridder: true
 
 		        </section>
 
+
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Example</h2>
+		            </header>
+
+		            <div class="section__body">
+				        <!-- code -->
+				        <div class="g">
+				        	{{!-- {{> gridder gridder--alt }} --}}
+				    	</div>
+			        </div>
+
+		        </section>
 <!-- code -->
+
 
 		    	<section class="section section--code">
 		            <header class="section__head">
