--- a/content/_partials/gridder.hbs
+++ b/content/_partials/gridder.hbs
@@ -1,5 +1,5 @@
 {{#this}}
-<div class="c gridder{{#if attribute.modifier}} gridder--{{attribute.modifier}}{{/if}}">
+<div class="c {{attribute.class}}{{#if attribute.modifier}} {{class}}--{{attribute.modifier}}{{/if}}">
 	{{#each content.cards}}
 	<div class="card card--gridder{{#if class}} {{class}}{{/if}}">
 		<div class="card__front--gridder">
