Removed Gridify, and added SideSlider

--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -240,7 +240,6 @@
 @MODULE-Label:                  true;
 @MODULE-Map:                    true;
 @MODULE-Gridder:				true;
-@MODULE-Gridify:                true;
 @MODULE-Media:                  true;
 @MODULE-Modal:                  true;
 @MODULE-Modeless:               true;
@@ -250,6 +249,7 @@
 @MODULE-Panel:					true;
 @MODULE-Popover:				true;
 @MODULE-Print:                  true;
+@MODULE-SideSlider:				true;
 @MODULE-ScrollSpy:				true;
 @MODULE-Scrollbar:				true;
 @MODULE-Story:             		true;
