--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -26,7 +26,6 @@
 //@import "base_modules/column.less";
 @import "base_modules/flash.less";
 @import "base_modules/focus.less";
-@import "base_modules/gridify.less";
 @import "base_modules/gridder.less";
 @import "base_modules/gmap.less";
 @import "base_modules/hovercard.less";
@@ -48,6 +47,7 @@
 @import "base_modules/pagination.less";
 @import "base_modules/panel.less";
 @import "base_modules/popover.less";
+@import "base_modules/sideslider.less";
 @import "base_modules/scrollspy.less";
 @import "base_modules/scrollbar.less";
 @import "base_modules/section.less";
