--- a/content/Alloy/Components/side-sliders.hbs
+++ b/content/Alloy/Components/side-sliders.hbs
@@ -7,6 +7,7 @@ nav-title: "Side Sliders"
 nav-text: "Side Sliders"
 nav-variant: "side-sliders"
 page-category: "components"
+js-sideslider: true
 ---
 
 <main class="w w--main">
@@ -34,7 +35,7 @@ page-category: "components"
 
 		            <div class="section__body">
 				        <!-- code -->
-
+						{{> sideslider sideslider }}
 				        <!-- end of code -->
 			        </div>
 
