--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -16,6 +16,32 @@
 	});
 </script>
 
+{{#if js-sideslider}}
+<script type="text/JavaScript">
+	require(["sideslider"], function() {
+
+		var slider;
+
+    	$(".sideslider").sideslider({
+    		onOutroComplete: function() { slider.public.triggerIntro(); }
+    	});
+
+		slider = $(".sideslider").data("sideslider");
+
+		$(".sliderintro").click(function(e) {
+			e.preventDefault();
+			slider.public.triggerIntro();
+		});
+
+		$(".slideroutro").click(function(e) {
+			e.preventDefault();
+			slider.public.triggerOutro();
+		});
+
+	});
+</script>
+{{/if}}
+
 {{#if js-scrollspy}}
 <script type="text/JavaScript">
 	require(["scrollspy"], function() { });
@@ -187,59 +213,6 @@
 			onScreenResize: equalizeSliderCards
 		});
 
-	});
-</script>
-{{/if}}
-
-{{#if js-gridify}}
-<script type="text/JavaScript">
-	require(["gridify", "equalizer"], function() {
-		var equalizeMasonryCards = function() {
-		    $(".card--gridify").equalizer({
-		        minimumWidth: 601,                  // The minimum width at which resizing will still occur
-		        applyWhat: "padding-bottom",        // The style to apply the difference in height to
-		        applyTo: ".card__body"       		// The element on which to apply the style to
-		    });
-		};
-
-		equalizeMasonryCards();
-		$(".gridify").gridify({
-            cardSelector: ".card", // The selector for cards within this.$element
-	        activeClass: "active",
-	        transitionClass: "deactivating",
-	        inactiveClass: "inactive",
-	        transitionLength: 400,
-	        noItemsEl: '<div class="alert alert--info">There were no results for your current search.  Try adjusting your search options.</div>',
-	        searchArgs: { randomise: false },
-	        // Example search function to randomly select which elements to display
-	        searchFunction: function ($cards, searchArgs) {
-	            var matches = [];
-	            var nonmatches = [];
-
-	            $cards.each(function() {
-	                if (searchArgs.randomise === false || Math.random() > 0.5) { matches.push(this); }
-	                else { nonmatches.push(this); }
-	            });
-
-	            var results = { $matches: $(matches), $nonmatches: $(nonmatches) };
-	            return results;
-	        },
-		});
-
-		$(".gridify__control.randomise").click(function(e) {
-			e.preventDefault();
-	        $(".gridify").gridify({ randomise: true });
-		});
-
-		$(".gridify__control.reset").click(function(e) {
-			e.preventDefault();
-	        $(".gridify").gridify({ randomise: false });
-		});
-
-		$(window).resize(function() {
-			equalizeMasonryCards();
-	        $(".gridify").gridify();
-		});
 	});
 </script>
 {{/if}}
