--- a/assets/less/base/debug.less
+++ b/assets/less/base/debug.less
@@ -2,6 +2,7 @@
 .debugger-styles() when not (@DEBUGGER) { }
 .debugger-styles() when (@DEBUGGER) {
 
+@DEBUG-Anim:                    @ANIM-Curve;
 /* =========================================================================
 // DEBUG
 // =======================================================================*/
@@ -22,11 +23,28 @@
  .debugger__body {
  	max-height: 100px;
  	overflow-y: scroll;
+
+    &.opening {
+        ._transition (height, 0.1s, @DEBUG-Anim);
+    }
+
+    &.closing {
+        ._transition (height, 0.1s, @DEBUG-Anim);
+    }
+
+    &.open {
+        height: 100%;
+    }
+
+    &.closed {
+        height: 0;
+    }
+
  }
 
 .list__debugger {
     pointer-events: none;
-	
+
     .list__item {
 		color: @COLOR-GreyDark;
 		._font-size(@TYPE-SIZE-Iota);
