--- a/assets/less/base_modules/scrollbar.less
+++ b/assets/less/base_modules/scrollbar.less
@@ -19,15 +19,12 @@
 		}
 
 		.scrollcontainer {
-			background-color: @COLOR-GreyLightest;
-		  	background-color: fade(@COLOR-Grey, 50%);
 			position: absolute;
 			top: 0;
 			right: -0.6em;
-			width: 0.5em;
+			width: 1em;
 			height: 100%;
           ._padding(2);
-          ._border-radius(5);
 
 			opacity: 0;
 		    ._transition (opacity, 0.4s, @SCROLLBAR-Anim);
@@ -47,16 +44,41 @@
 	}
 
 	.button-up {
+		height: 10%;
+		width: 100%;
+		cursor: pointer;
 
+		background-color: @COLOR-GreyLightest;
+	  	background-color: fade(@COLOR-Grey, 50%);
+        ._border-radius(5);
+
+		&:before {
+			content: "^";
+		}
 	}
 
 	.button-down {
+		height: 10%;
+		width: 100%;
+		cursor: pointer;
 
+		background-color: @COLOR-GreyLightest;
+	  	background-color: fade(@COLOR-Grey, 50%);
+        ._border-radius(5);
+
+		&:before {
+			content: "v";
+		}
 	}
 
 	.scrollbar {
 		width: 100%;
-		height: 100%;
+		height: 80%;
+		cursor: pointer;
+
+		background-color: @COLOR-GreyLightest;
+	  	background-color: fade(@COLOR-Grey, 50%);
+        ._border-radius(5);
 	}
 
 	.button-scroller {
