--- a/content/Alloy/Components/scrollbar.hbs
+++ b/content/Alloy/Components/scrollbar.hbs
@@ -2,7 +2,7 @@
 title: Scrollbar
 layout: alloy.hbs
 
-nav-thumb: "components/placeholder.png"
+nav-thumb: "placeholder.jpg"
 nav-title: "Scrollbar"
 nav-text: "Scrollbar"
 nav-variant: "scrollbar"
