--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -228,6 +228,7 @@
 @MODULE-Browsehappy:            true;
 @MODULE-Button:                 true;
 @MODULE-Card:                   true;
+@MODULE-Cardfader:             	true;
 @MODULE-Cardslider:             true;
 @MODULE-Column:                 true;
 @MODULE-Flash:                  true;
