--- a/assets/less/startup.less
+++ b/assets/less/startup.less
@@ -20,6 +20,7 @@
 @import "base_modules/browsehappy.less";
 //@import "base_modules/badge.less";
 @import "base_modules/button.less";
+@import "base_modules/cardfader.less";
 //@import "base_modules/card.less";
 //@import "base_modules/cardslider.less";
 //@import "base_modules/cite.less";
