--- a/assets/less/alloy.less
+++ b/assets/less/alloy.less
@@ -21,6 +21,7 @@
 @import "base_modules/badge.less";
 @import "base_modules/button.less";
 @import "base_modules/card.less";
+@import "base_modules/cardfader.less";
 @import "base_modules/cardslider.less";
 @import "base_modules/cite.less";
 //@import "base_modules/column.less";
