--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -218,7 +218,7 @@
 // BASE MODULES
 // Change to false if not using
 // =========================================================================//
-
+@MODULE-Animations:             true;
 @MODULE-Accordion:              true;
 @MODULE-Alert:                  true;
 @MODULE-Badge:                  true;
