--- a/assets/less/startup.less
+++ b/assets/less/startup.less
@@ -10,7 +10,7 @@
 
 // BASE MODULES
 // ----------------------------------------------------
-
+@import "base_modules/animations.less";
 //@import "base_modules/accordion.less";
 @import "base_modules/alert.less";
 @import "base_modules/article.less";
