--- a/content/Alloy/Components/menus.hbs
+++ b/content/Alloy/Components/menus.hbs
@@ -7,6 +7,7 @@ nav-title: "Menus"
 nav-text: "Menus"
 nav-variant: "menus"
 page-category: "components"
+js-menus: true
 ---
 
 <main class="w w--main">
