--- a/content/Alloy/Animation/index.hbs
+++ b/content/Alloy/Animation/index.hbs
@@ -8,6 +8,7 @@ nav-variant: "animation"
 navigation-main: true
 navigation-order: 4
 page-category: "animation"
+js-animations: true
 ---
 
 <main class="w w--main">
@@ -27,11 +28,25 @@ page-category: "animation"
 <!-- example -->
 				<section class="section section--example">
 		            <header class="section__head">
-		                <h2 class="section__title">Example</h2>
+		                <h2 class="section__title">Alloy Animations</h2>
 		            </header>
 
 		            <div class="section__body">
 				        <!-- code -->
+
+				        <div class="g">
+				        	<div class="c__lg--2-3">
+					        	<div class="animexample example--bezier">
+					        		<div class="circle circle--cssbezier"></div>
+					        		<div class="circle circle--jsbezier"></div>
+					        	</div>
+				        	</div>
+				        	<div class="c__lg--1-3">
+				        		<p>Here at Alloy we typically use the cubic-bezier curve shown to the left.<br/>
+				        		The <strong style="color: red;">red</strong> circle is using a CSS transition to animate its movement.<br/>
+				        		The <strong style="color: blue;">blue</strong> circle is using JQuery animate and a custom cubic-bezier easing to animate.</p>
+			        		</div>
+				        </div>
 
 				        <!-- end of code -->
 			        </div>
