--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -280,7 +280,7 @@
 
 {{#if js-animations}}
 <script type="text/JavaScript">
-	require(["examples/example.animations"], function() { });
+	require(["animate", "examples/example.animations"], function() { });
 </script>
 {{/if}}
 
