--- a/assets/less/base_modules/animations.less
+++ b/assets/less/base_modules/animations.less
@@ -1,7 +1,24 @@
 .animations-styles() when not (@MODULE-Animations) { }
 .animations-styles() when (@MODULE-Animations) {
 
-	@ANIMATION-Anim:					@ANIM-Curve;
+	@ANIMATION-Anim-Enter:					@ANIM-Entrance;
+	@ANIMATION-Anim-Exit:					@ANIM-Exit;
+	@ANIMATION-Anim-Curve:					@ANIM-Curve;
+
+	.anim__opacity {
+		._transition (opacity, 0.35s, @ANIMATION-Anim-Curve);
+	}
+
+	.anim__opacity--enter {
+		._transition (opacity, 0.35s, @ANIMATION-Anim-Enter);
+	}
+
+	.anim__opacity--exit {
+		._transition (opacity, 0.35s, @ANIMATION-Anim-Exit);
+	}
+
+
+
 
 	.animexample {
 		background-color: #D3D3D3;
@@ -15,7 +32,6 @@
 
 			.circle {
 				position: absolute;
-
 	    		width: 50px;
 				height: 50px;
 				._border-radius(25);
@@ -24,7 +40,6 @@
 					top: 50px;
 					left: 70px;
 					background-color: red;
-			    	._transition (left, 1s, @ANIMATION-Anim);
 			    }
 
 			    &.circle--jsbezier {
@@ -32,6 +47,23 @@
 					left: 70px;
 					background-color: blue;
 			    }
+			}
+		}
+
+		&.example--diy {
+			width: 100%;
+			height: 500px;
+			overflow: hidden;
+
+			.circle {
+	    		position: relative;
+	    		width: 50px;
+				height: 50px;
+				._border-radius(25);
+				background-color: purple;
+
+				top: 250px;
+				left: 50%;
 			}
 		}
 
