--- a/content/Alloy/Animation/index.hbs
+++ b/content/Alloy/Animation/index.hbs
@@ -44,7 +44,9 @@ js-animations: true
 				        	<div class="c__lg--1-3">
 				        		<p>Here at Alloy we typically use the cubic-bezier curve shown to the left.<br/>
 				        		The <strong style="color: red;">red</strong> circle is using a CSS transition to animate its movement.<br/>
-				        		The <strong style="color: blue;">blue</strong> circle is using JQuery animate and a custom cubic-bezier easing to animate.</p>
+				        		The <strong style="color: blue;">blue</strong> circle is using JQuery animate and a custom cubic-bezier easing to animate.<br />
+				        		We don't just want to animate circles though...<br />
+			        			We also want to animate all sorts of effects like shrinking, expanding, fades, slides, and probably more that I've forgotten about.  <strong>So let's get to it!</strong></p>
 			        		</div>
 				        </div>
 
@@ -52,6 +54,46 @@ js-animations: true
 			        </div>
 
 		        </section>
+
+
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Do It Yourself</h2>
+		            </header>
+
+		            <div class="section__body">
+				        <!-- code -->
+
+				        <div class="g">
+				        	<div class="c__lg--2-3">
+					        	<div class="animexample example--diy">
+					        		<div class="circle"></div>
+					        	</div>
+				        	</div>
+				        	<div class="c__lg--1-3">
+				        		<p>Use the form below to animate the circle dynamically or click in the area to do some other magic:</p>
+				        		<form class="animform">
+
+				        			<label>Property:</label>
+				        			<input type="text" class="animform__property" value="left" />
+
+				        			<label>Value:</label>
+				        			<input type="text" class="animform__value" value="-=50px" />
+
+				        			<label>Time:</label>
+				        			<input type="number" class="animform__time" value="500" />
+
+				        			<button class="button" type="submit">Go!</button>
+
+				        		</form>
+			        		</div>
+				        </div>
+
+				        <!-- end of code -->
+			        </div>
+
+		        </section>
+
 
 <!-- code -->
 		    	<section class="section section--code">
