Added fancy accordion to animations

--- a/content/Alloy/Animation/index.hbs
+++ b/content/Alloy/Animation/index.hbs
@@ -213,6 +213,72 @@ js-animations: true
 		        </section>
 
 
+				<section class="section section--fancyaccordion">
+		            <header class="section__head">
+		                <h2 class="section__title">Fancy Accordion</h2>
+		            </header>
+
+		            <div class="section__body">
+
+				        <div class="g">
+				        	<div class="c__lg--2-3">
+					        	<div class="animexample example--fancy-accordion">
+
+					        		<div class="buttons topbuttons c">
+						        		<div class="card--button" data-accordionindex="#acc1">
+						        			<a href="#acc1" ><h1>1</h1></a>
+						        		</div class="card--button">
+						        		<div class="card--button" data-accordionindex="#acc2">
+						        			<a href="#acc2"><h1>2</h1></a>
+						        		</div class="card--button">
+						        		<div class="card--button" data-accordionindex="#acc3">
+						        			<a href="#acc3"><h1>3</h1></a>
+						        		</div class="card--button">
+					        		</div>
+
+									<div class="contents c">
+										<div class="card--content" id="acc1" style="background-color: #F8D6B4;">
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id tristique est. In blandit dolor eu mi bibendum, et hendrerit tellus scelerisque. Sed vehicula risus eu sem pharetra varius. Fusce sed congue diam. Aliquam ac scelerisque dolor. Vivamus facilisis hendrerit tincidunt. Cras erat leo, aliquet non lorem porta, finibus fringilla ante. Maecenas id commodo enim.</p>
+										</div>
+										<div class="card--content" id="acc2" style="background-color: #F2AE69;">
+											<p>Pellentesque pellentesque sed elit vel tincidunt. Sed posuere volutpat massa et cursus. Praesent iaculis bibendum aliquam. Phasellus porttitor diam nunc, a consectetur leo vestibulum non. Vestibulum lobortis efficitur vehicula. .</p>
+										</div>
+										<div class="card--content" id="acc3" style="background-color: #EA7805;">
+											<p>Etiam ac ultricies sapien, ut ornare est. Aenean quis tortor et est fermentum ultricies eu et ipsum. Sed vestibulum magna laoreet libero commodo pellentesque. Vivamus dictum rhoncus libero, eu dictum magna.</p>
+										</div>
+										<div class="card--content" id="acc4" style="background-color: #BB6004;">
+											<p>Ut lacinia aliquet turpis, sit amet mattis ex tincidunt eu. Nulla sit amet sapien a arcu lobortis tempor. Cras ultrices lorem sed vulputate volutpat. Sed neque justo, cursus et posuere a, vulputate ut magna. Proin pharetra lorem sodales diam vulputate vestibulum.</p>
+										</div>
+										<div class="card--content" id="acc5" style="background-color: #703902">
+											<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Integer at mattis quam. Suspendisse potenti. Vivamus nec lectus in urna porta laoreet at a mi. Sed convallis eu nunc eu viverra. Sed mi nulla, laoreet congue vehicula in, euismod at libero. Aliquam quis est posuere, suscipit orci non, vestibulum tortor.</p>
+										</div>
+										<div class="card--content" id="acc6" style="background-color: #2C1600;">
+											<p>Nam luctus interdum urna, a pellentesque mauris tincidunt in. Curabitur ac cursus elit. Nunc non nisi elementum, convallis mauris id, iaculis dui. Proin vel ullamcorper dolor. Donec ullamcorper sapien id libero commodo cursus. In feugiat ornare risus ac ullamcorper. Pellentesque purus nibh, malesuada eu dignissim eu, cursus sodales lectus. Phasellus odio est, dictum et enim nec, bibendum semper felis. Donec non mollis lorem, id iaculis diam. In viverra interdum arcu, ac iaculis ante mattis in. In dictum magna ut vestibulum porttitor. Duis faucibus condimentum turpis at porttitor. Aliquam imperdiet ante a blandit mollis. Vivamus vulputate feugiat lorem et sodales. Phasellus tincidunt tortor eros, vel maximus orci suscipit at.</p>
+										</div>
+					        		</div>
+
+									<div class="buttons bottombuttons c">
+						        		<div class="card--button" data-accordionindex="#acc4">
+						        			<a href="#acc4"><h1>4</h1></a>
+						        		</div class="card--button">
+						        		<div class="card--button" data-accordionindex="#acc5">
+						        			<a href="#acc5"><h1>5</h1></a>
+						        		</div class="card--button">
+						        		<div class="card--button" data-accordionindex="#acc6">
+						        			<a href="#acc6"><h1>6</h1></a>
+						        		</div class="card--button">
+					        		</div>
+				        		</div>
+				        	</div>
+				        	<div class="c__lg--1-3">
+				        		<p>Maybe we want something a bit more interesting than your standard accordion.</p>
+			        		</div>
+				        </div>
+
+			        </div>
+		        </section>
+
+
 
 {{!-- 				<section class="section section--example">
 		            <header class="section__head">
