Added Deal Emerge Effect

--- a/assets/less/base_modules/animations.less
+++ b/assets/less/base_modules/animations.less
@@ -69,7 +69,7 @@
 		}
 
 		/* The examples of emerging cards */
-		&.example--emerger, &.example--emerger-squares, &.example--emerger-effects {
+		&.example--emerger, &.example--emerger-squares, &.example--emerger-effects, &.example--emerger-moreeffects {
 			height: 780px;
 			overflow: hidden;
 
