--- a/content/Alloy/Animation/index.hbs
+++ b/content/Alloy/Animation/index.hbs
@@ -212,6 +212,49 @@ js-animations: true
 			        </div>
 		        </section>
 
+				<section class="section section--moreeffects">
+		            <header class="section__head">
+		                <h2 class="section__title">Emerger - More Effects</h2>
+		            </header>
+
+		            <div class="section__body">
+
+				        <div class="g">
+				        	<div class="c__lg--2-3">
+					        	<div class="animexample example--emerger-moreeffects">
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+					        		<div class="emerging"></div>
+				        		</div>
+				        	</div>
+				        	<div class="c__lg--1-3">
+				        		<a href="#" class="button example__deal--default">Deal</a>
+				        		<a href="#" class="button example__deal--random">Deal Random Order</a>
+				        		<a href="#" class="button example__deal--verticalchain">Deal Vertical Chain</a>
+			        		</div>
+				        </div>
+
+			        </div>
+
+		        </section>
+
 
 				<section class="section section--fancyaccordion">
 		            <header class="section__head">
